--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Work Experience</h2>
         <ul>
             <li>
-                <h3>Lecturer at Menon's Eduworld</h3>
+                <h3>Lecturer at Eduworld</h3>
             </li>
             <p>
                 June 2021 - May 2023
